c4prj2_input/grade.txt
Grading at Wed Dec 25 10:46:31 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:30:60: error: lvalue required as left operand of assignment
     if (fc->decks[i].cards == NULL || fc->decks[i].n_cards = 0) {
                                                            ^
Compilation of future.c failed

Overall Grade: F
